	PR middle-end/42674 	* c-decl.c (finish_function): Don't emit -Wreturn-type warnings in 	functions with noreturn attribute.

* decl.c (finish_function): Don't emit -Wreturn-type warnings in
	functions with noreturn attribute.

	* c-c++-common/pr42674.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155920 138bc75d-0d04-0410-961f-82ee72b054a4